// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressFab renders component 1`] = `
<WithStyles(ForwardRef(IconButton))
  classes={
    Object {
      "root": "root-mock",
    }
  }
>
  <Icon />
</WithStyles(ForwardRef(IconButton))>
`;

exports[`ProgressFab renders with passed components 1`] = `
<WithStyles(ForwardRef(IconButton))
  buttonRef={
    Object {
      "current": null,
    }
  }
  classes={
    Object {
      "root": "root-mock",
    }
  }
  onClick={[MockFunction]}
>
  <Icon />
</WithStyles(ForwardRef(IconButton))>
`;
